# reports

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: generate.py  themes.py
backend/app/core/: cache.py  config.py  database.py  seed.py
backend/app/models/: theme.py
backend/app/pdf/: elements.py  engine.py  parser.py
backend/app/schemas/: theme.py
docs/plans/: 2026-04-29-enterprise-template-studio-design.md  2026-04-29-markdown-pdf-reports-design.md  2026-04-30-template-studio-ux-redesign.md
example/: example.md
frontend/: index.html  nginx.conf  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Dock.tsx  FileUpload.tsx  PDFPreview.tsx  TemplateStudio.tsx  ThemePicker.tsx
