[project]
name = "reports-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "beanie>=1.27.0",
    "pymongo>=4.9.0",
    "redis>=6.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "reportlab>=4.2.0",
    "mistune>=3.0.0",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
